<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_realsense</name>
  <version>0.0.1</version>
  <description>TurtleBot3 with RealSense camera simulation</description>
  <maintainer email="ameya5phadke@gmail.com">ameya</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>gazebo_ros</depend>
  <depend>turtlebot3_description</depend>
  <depend>turtlebot3_gazebo</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>